# clipdrop

./: .gitignore  CHANGELOG.md  README.md  instruction.md  pyproject.toml  summary_tickets.md  usage.md
.github/workflows/: build-macos.yml  release.yml
scripts/: export_shortcuts.sh
src/clipdrop/: clipboard.py  detect.py  exceptions.py  files.py  html_parser.py  macos_ai.py  main.py  pdf.py  youtube.py
swift/ClipdropSummarize/Sources/ClipdropSummarize/: main.swift
swift/TranscribeClipboard/: Package.swift
swift/TranscribeClipboard/Sources/ClipdropTranscribeClipboard/: TranscribeClipboard.swift  main.swift
tests/: conftest.py  test_cli_youtube.py  test_clipboard.py  test_enhanced_html.py  test_performance.py  test_summarization.py  test_youtube.py
